# Arithmetic-algorithms

./: README.md
hw_1/part_1/: CMakeLists.txt
hw_1/part_1/task_1/: CMakeLists.txt  main.cpp
hw_1/part_1/task_2/: main.cpp
hw_1/part_1/task_3/: main.cpp
hw_1/part_1/task_4/: limitAtA.cpp  limitAtA.h  limitInf.cpp  limitInf.h  main.cpp  polynomial_utils.cpp  polynomial_utils.h
hw_1/part_3/: CMakeLists.txt
hw_1/part_3/4_3_1:16/: main.cpp
hw_1/part_3/4_6_4:1/: main.cpp
hw_1/part_3/4_6_4:2/: main.cpp
hw_1/part_3/4_6_4:3/: main.cpp
hw_1/part_3/4_6_4:4/: main.cpp
hw_1/part_3/4_6_4:8/: main.cpp
hw_10/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  math_utils.cpp  math_utils.h
hw_11/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  powersum.cpp  powersum.h
hw_2/part_1/src/: CMakeLists.txt  gf2n_demo.cpp  gf2n_demo.h  gf2n_functions.cpp  gf2n_functions.h  main.cpp
hw_2/part_2/knut/task_4_6_4:41/: CMakeLists.txt  main.cpp
hw_2/part_2/kormen/: CMakeLists.txt
hw_2/part_2/kormen/task_30_1_7/: main.cpp
hw_2/part_2/kormen/task_30_3/: main.cpp
hw_2/part_2/von_zur/: CMakeLists.txt
hw_2/part_2/von_zur/task_8_1/: main.cpp
hw_2/part_2/von_zur/task_8_24/: main.cpp
hw_4/polynom_app/: CMakeLists.txt  CoeffTypes.h  Polynomial.cpp  Polynomial.h  Polynomial.tpp  PolynomialIO.cpp  PolynomialIO.h  main.cpp
hw_6/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
hw_6/io/: FileReader.cpp  FileReader.h  InputData.h
hw_6/math/: Monomial2D.h  MonomialIdeal.cpp  MonomialIdeal.h
hw_6/ui/: IdealGrid.cpp  IdealGrid.h
