cmake_minimum_required(VERSION 3.20)
project(part_1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(task_3_1 4_3_1:16/main.cpp)
add_executable(task_3_2 4_6_4:1/main.cpp)
add_executable(task_3_3 4_6_4:2/main.cpp)
add_executable(task_3_4 4_6_4:3/main.cpp)
add_executable(task_3_5 4_6_4:4/main.cpp)
add_executable(task_3_6 4_6_4:8/main.cpp)